fix overflow for the sidebar

--- a/website/themes/uppy/source/css/_page.scss
+++ b/website/themes/uppy/source/css/_page.scss
@@ -31,11 +31,11 @@
 
   @media #{$screen-medium} {
     // position: absolute;
-    top: 60px;
+    top: 0;
     left: 0;
     // bottom: 0;
     // padding: 2.2em 0;
-    padding-top: 35px;
+    padding-top: 95px;
     padding-left: 60px;
     padding-bottom: 130px;
     // width: 20px;
